--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,13 @@
     <nav>
       <ul class="nav-list">
         <li class="nav-list-item">
-          <%= link_to "top", top_path %>
+          <%= link_to "Top", top_path %>
         </li>
         <li class="nav-list-item">
-          <%= link_to "nav List", new_list_path %>
+          <%= link_to "Lists", lists_path %>
+        </li>
+        <li class="nav-list-item">
+          <%= link_to "New List", new_list_path %>
         </li>
       </ul>
     </nav>
